# OurChain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  configure.ac  easymake.sh  install.sh  install_bitcoin.sh  mytest.sh  sample.c  sample.cpp  test.c  test.sh  work.sh
.bitcoin/: bitcoin.conf
.github/workflows/: ci.yml
build-aux/m4/: ax_cxx_compile_stdcxx.m4
contrib/devtools/: clang-format-diff.py
doc/: build-unix.md  dev-docker.md  ourcontract.md  ourcontractV2.md  regtest-use.md
example/: ano.c  call_contract.sh  callee.c  caller.c  client.c  hello.c  orc20.c  orc721.c  sendtoaddr.c  sendtocont.c  server.c  vote.c
example/ourcontract-simulator/: .gitignore  index.js  package.json
ourTest/: Dockerfile  README.md  fulltest.sh  run.sh
ourTest/node/: .gitignore
ourTest/zk/: .gitignore  Dockerfile  README.md  ex1.c  ex1.zok  ex2.zok  fulltest.sh
ourZK/: proof1.json  proof2.json  proof3.json  proof4.json  proving.key  root.zok  verification.key
src/: .clang-format  EPow.cpp  EPow.h  GNonces.h  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkqueue.h  clientversion.cpp  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_memusage.h  core_read.cpp  core_write.cpp  dbwrapper.cpp  dbwrapper.h  (+61 more)
src/OurChain/: gpow_test.cpp  gpowserver.cpp  gpowserver.h  powertimestamp.cpp  powertimestamp.h  powertimestamp_test.cpp
src/bench/: Examples.cpp  base58.cpp  bench.h  bench_bitcoin.cpp  checkblock.cpp  checkqueue.cpp  (+3 more)
src/contract/: Makefile.am  cache.cpp  cache.h  contract.h  contractServer.cpp  contractServer.h  contract_api.h  contractdb.cpp  contractdb.h  contractserver.cpp  contractserver.h  dbWrapper.cpp  dbWrapper.h  libourcontract.c  libourcontract.cpp  observer.cpp  observer.h  ourcontract-mkdll  ourcontract-mkdll.in  ourcontract-rt.cpp  ourcontract.h  processing.cpp  processing.h  server.cpp  server.h  state.cpp  state.h  threadsafe_queue.h  updateStrategy.cpp  updateStrategy.h  updatepolicy.cpp  updatepolicy.h
src/contract/db/: contractdb.cpp  contractdb.h  dbWrapper.cpp  dbWrapper.h
src/contract/lib/: libourcontract.cpp  ourcontract.h
src/contract/libourcontract/: libourcontract.cpp  ourcontract.h  prio_monitor.h
src/rustlib/: .gitignore  Cargo.toml  bindings.h  build.rs  cbindgen.toml
src/rustlib/src/: bjj.rs  lib.rs  log.rs  mypoint.rs  ym.rs  zk.rs
testtps/: Dockerfile  Makefile  README  clean.sh  count.cpp  docker_clean.sh  docker_run.cpp  input_example_tpstest  input_example_tpstest_remoteserver  miner.cpp  miner.sh  tpstest.cpp  trader.sh
tps/: config.sh  tps.cpp
(+245 files in other folders)
